<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginTop="@dimen/page_margin"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/ivVideo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/teal_200" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/black_80"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/title"
        android:textSize="@dimen/medium_text_size"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/fjalla_one_regular"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/tvVideoCount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/description"
        android:textSize="@dimen/medium_text_size"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/black"
        android:fontFamily="@font/noto_sans_regular"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>