<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/dark_white"
        android:paddingHorizontal="@dimen/page_margin"
        android:paddingVertical="24dp"
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPlaylistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fjalla_one_regular"
            android:text="@string/name"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/description_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlaylistName" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_marginStart="@dimen/page_margin"
        android:id="@+id/tvVideoCount"
        android:text="@string/_32_video_series"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_regular"
        android:layout_marginTop="@dimen/page_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginHorizontal="@dimen/page_margin"
        tools:listitem="@layout/item_detail"
        android:id="@+id/rvPlaylist"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoCount" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_you_tube_btn"
        app:layout_constraintBottom_toBottomOf="@+id/tvVideoCount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/page_margin" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>